--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "babel": {
+    "presets": ["react-app"],
+    "plugins": ["@babel/plugin-transform-private-property-in-object"]
   }
 }
