--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://KirillEkb.github.io/todo",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,7 +39,14 @@
     ]
   },
   "babel": {
-    "presets": ["react-app"],
-    "plugins": ["@babel/plugin-transform-private-property-in-object"]
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-private-property-in-object"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
