--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "YOUR_COMMAND_HERE",
-      "pre-push": "YOUR_COMMAND_HERE"
+      "pre-commit": "eslint ./src",
+      "pre-push": "prettier"
     }
   }
 }
