--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "always",
     },
+    "cSpell.words": [
+        "todos"
+    ],
     
     
     
